# micropython-sd-logger

./: .gitignore  README.md  main.py  micropython-sd-logger.code-workspace  pyproject.toml
config/: storage.py
core/: sd_logger.py
lib/sdcard/: __init__.py
